fund-counter-service/templates/serviceentries.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-account-token-http
spec:
  hosts:
  - account-token-service.private.bituniverse.org
  location: MESH_EXTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-pionex-counter-rpc
spec:
  hosts:
  - pionex-counter.rpc.exchange.local
  location: MESH_EXTERNAL
  ports:
  - number: 5050 
    name: grpc
    protocol: GRPC
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: external-svc-pionex-broker-rpc
spec:
  hosts:
  - pionex-broker.rpc.exchange.local
  location: MESH_EXTERNAL
  ports:
  - number: 5050
    name: grpc
    protocol: GRPC
